trunk/Archive2/42/94e5fc5f1a30fe/output
In file included from /usr/local/include/c++/4.9.2/future:38:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/functional: In instantiation of 'static void std::_Function_base::_Base_manager<_Functor>::_M_clone(std::_Any_data&, const std::_Any_data&, std::false_type) [with _Functor = W; std::false_type = std::integral_constant<bool, false>]':
/usr/local/include/c++/4.9.2/functional:1914:51:   required from 'static bool std::_Function_base::_Base_manager<_Functor>::_M_manager(std::_Any_data&, const std::_Any_data&, std::_Manager_operation) [with _Functor = W]'
/usr/local/include/c++/4.9.2/functional:2428:19:   required from 'std::function<_Res(_ArgTypes ...)>::function(_Functor) [with _Functor = W; <template-parameter-2-2> = void; _Res = void; _ArgTypes = {}]'
main.cpp:32:20:   required from here
/usr/local/include/c++/4.9.2/functional:1878:34: error: use of deleted function 'W::W(const W&)'
    __dest._M_access<_Functor*>() =
                                  ^
main.cpp:20:5: note: declared here
     W(W const&r) = delete;
     ^
